@@ -473,28 +473,28 @@ void Skyscraper::GetInput()
 	if (wxGetKeyState(WXK_ALT))
 	{
 		//strafe movement
-		if (wxGetKeyState(WXK_RIGHT))
+		if (wxGetKeyState(WXK_RIGHT) || wxGetKeyState((wxKeyCode)'d'))
 			Simcore->camera->Strafe(1);
-		if (wxGetKeyState(WXK_LEFT))
+		if (wxGetKeyState(WXK_LEFT) || wxGetKeyState((wxKeyCode)'a'))
 			Simcore->camera->Strafe(-1);
-		if (wxGetKeyState(WXK_UP))
+		if (wxGetKeyState(WXK_UP) || wxGetKeyState((wxKeyCode)'w'))
 			Simcore->camera->Float(1);
-		if (wxGetKeyState(WXK_DOWN))
+		if (wxGetKeyState(WXK_DOWN) || wxGetKeyState((wxKeyCode)'s'))
 			Simcore->camera->Float(-1);
 	}
 	else
 	{
-		if (wxGetKeyState(WXK_RIGHT))
+		if (wxGetKeyState(WXK_RIGHT) || wxGetKeyState((wxKeyCode)'d'))
 			Simcore->camera->Turn(1);
-		if (wxGetKeyState(WXK_LEFT))
+		if (wxGetKeyState(WXK_LEFT) || wxGetKeyState((wxKeyCode)'a'))
 			Simcore->camera->Turn(-1);
-		if (wxGetKeyState(WXK_PRIOR)) //page up
+		if (wxGetKeyState(WXK_PAGEUP))
 			Simcore->camera->Look(1);
-		if (wxGetKeyState(WXK_NEXT)) //page down
+		if (wxGetKeyState(WXK_PAGEDOWN))
 			Simcore->camera->Look(-1);
-		if (wxGetKeyState(WXK_UP))
+		if (wxGetKeyState(WXK_UP) || wxGetKeyState((wxKeyCode)'w'))
 			Simcore->camera->Step(1);
-		if (wxGetKeyState(WXK_DOWN))
+		if (wxGetKeyState(WXK_DOWN) || wxGetKeyState((wxKeyCode)'s'))
 			Simcore->camera->Step(-1);
 		if (wxGetKeyState(WXK_SPACE))
 			Simcore->camera->Jump();
